--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,11 +17,6 @@ jobs:
         uses: actions/cache@v2
         id: restore-cache
         with:
-          # Specify the paths to restore cache from
-          path: |
-            ~/.npm
-            ${{ github.workspace }}/apps/sinlessgames-ui/.next/cache
-            ${{ github.workspace }}/node_modules
           # Use the same key and restore-keys as in the caching step
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
           restore-keys: |
@@ -79,9 +74,8 @@ jobs:
           - name: Determine new version
             id: determine-new-version
             run: |
-              PREVIOUS_VERSION=${{ env.PREVIOUS_VERSION }}
-              echo "Previous version: $PREVIOUS_VERSION"
-              if [[ $PREVIOUS_VERSION =~ ^([0-9]+)\.([0-9]+)\.([0-9]+)$ ]]; then
+              echo "Previous version: ${{ env.PREVIOUS_VERSION }}"
+              if [[ ${{ env.PREVIOUS_VERSION }} =~ ^([0-9]+)\.([0-9]+)\.([0-9]+)$ ]]; then
                 MAJOR=${BASH_REMATCH[1]}
                 MINOR=${BASH_REMATCH[2]}
                 PATCH=${BASH_REMATCH[3]}
