--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
           cache-name: cache-node-modules
         with:
           # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
+          path: ~/node_modules
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -86,9 +86,9 @@ jobs:
             run: |
               echo "Previous version: ${{ env.PREVIOUS_VERSION }}"
               if [[ ${{ env.PREVIOUS_VERSION }} =~ ^([0-9]+)\.([0-9]+)\.([0-9]+)$ ]]; then
-                MAJOR=${BASH_REMATCH[1]}
-                MINOR=${BASH_REMATCH[2]}
-                PATCH=${BASH_REMATCH[3]}
+                MAJOR=$(echo "${{ env.PREVIOUS_VERSION }}" | cut -d'.' -f1)
+                MINOR=$(echo "${{ env.PREVIOUS_VERSION }}" | cut -d'.' -f2)
+                PATCH=$(echo "${{ env.PREVIOUS_VERSION }}" | cut -d'.' -f3)
                 NEW_VERSION="$MAJOR.$MINOR.$((PATCH + 1))"
               else
                 NEW_VERSION="1.0.0"
