--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
         id: determine-new-version
         run: |
               # Extract version from package.json
-              PACKAGE_VERSION=$(jq -r '.version' package.json)
+              PACKAGE_VERSION=$(jq -r '.version' ./package.json)
               echo "Package version: $PACKAGE_VERSION"
 
               # Check if the previous version matches xx.xx.xx format
