--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
               echo "Package version: $PACKAGE_VERSION"
 
               # Create the new version
-              NEW_VERSION="$MAJOR.$MINOR.$(("
+              NEW_VERSION="$MAJOR.$MINOR.$((patch + 1))"
               echo "New version: $NEW_VERSION"
               echo "NEW_VERSION=$NEW_VERSION
 
