--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,32 +26,32 @@ jobs:
       - name: Determine new version
         id: determine-new-version
         run: |
-              # Extract version from package.json
-              PACKAGE_VERSION=$(jq -r '.version' package.json)
-              echo "Package version: $PACKAGE_VERSION"
+          # Extract version from package.json
+          PACKAGE_VERSION=$(jq -r '.version' package.json)
+          echo "Package version: $PACKAGE_VERSION"
 
-              # Split the previous version into major, minor, and patch
-              IFS='.' read -r MAJOR MINOR PATCH <<<"${{ env.PREVIOUS_VERSION }}"
-              echo "Previous version components: Major=$MAJOR, Minor=$MINOR, Patch=$PATCH"
+          # Check if the previous version matches xx.xx.xx format
+          if [[ "${{ env.PREVIOUS_VERSION }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Previous version format is correct"
+          else
+            echo "Previous version format is incorrect"
+            exit 1
+          fi
+  
+          # Split the previous version into major, minor, and patch
+          IFS='.' read -r MAJOR MINOR PATCH <<<"${{ env.PREVIOUS_VERSION }}"
+          echo "Previous version components: Major=$MAJOR, Minor=$MINOR, Patch=$PATCH"
 
-              # Create the new version
-              NEW_VERSION="$MAJOR.$MINOR.$((patch + 1))"
-              echo "New version: $NEW_VERSION"
-              echo "NEW_VERSION=$NEW_VERSION
+          # Create the new version
+          NEW_VERSION="$MAJOR.$MINOR.$((PATCH + 1))"
+          echo "New version: $NEW_VERSION"
 
-              # Check if the previous version matches xx.xx.xx format
-              if [[ "${{ env.PREVIOUS_VERSION }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-                echo "Previous version format is correct"
-              else
-                echo "Previous version format is incorrect"
-                exit 1
-              fi
+          # Compare the previous version with the version from package.json
+          if [ "$PACKAGE_VERSION" == "${{ env.PREVIOUS_VERSION }}" ]; then
+            echo "Versions match"
+          else
+            echo "Versions do not match"
+            exit 1
+          fi
 
-              # Compare the previous version with the version from package.json
-              if [ "$PACKAGE_VERSION" == "${{ env.PREVIOUS_VERSION }}" ]; then
-                echo "Versions match"
-              else
-                echo "Versions do not match"
-                exit 1
-              fi
     
