--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -82,7 +82,7 @@ jobs:
           git config --global user.name "GitHub Actions"
           git add .
           git commit -m "Update package.json version to $NEW_VERSION"
-          git push origin HEAD:main
+          git push origin main:main
 
 
     
